# mcp

./: .env.example  .gitignore  README.md  demo_semantic_search.py  multi_index_search.py  pyproject.toml  verify_server.py
src/elasticsearch_mcp/: __init__.py  __main__.py  api.py  config.py  es_client.py  index_setup.py  query_builder.py  server.py
tests/: test_server.py
